:bug: Safari layout bugs

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -693,9 +693,15 @@ button,
 .c-navigation--links {
     display: none;
     float: left;
+    width: 100%;
+
+    // .c-navigation--link {
+    //   width: 100%;
+    // }
     @include media($breaks-at-sm) {
-      float: none;
       display: flex !important;
+      float: none;
+      width: auto;
       flex-direction: row;
     }
   }
@@ -870,7 +876,7 @@ button,
   img {
     width: 100%;
     max-width: 100%;
-    max-height: 250px;
+    height: 200px;
     object-fit: cover;
     filter: grayscale(100%);
   }
